Cleans up Dashboard and makes it more readable (truncates arrays of teams, fixes spacing, etc.)

--- a/src/css/Dashboard.css
+++ b/src/css/Dashboard.css
@@ -5,7 +5,7 @@
 }
 
 .Dashboard .Control_container {
-    margin-top: 8px;
+    margin: 8px;
     display: flex;
     flex-direction: column;
 }
@@ -31,7 +31,6 @@
 .Dashboard {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     margin-left: 8px;
 }
 
@@ -40,9 +39,18 @@
     margin-top: 8px;
 }
 
+.Dashboard .Data_row {
+    margin-left: 5px;
+}
+
+.Dashboard .Stat_container {
+    margin-top: -5px;
+}
+
 .Dashboard .Team_group {
     display: flex;
     flex-direction: row;
+    margin-top: 5px;
 }
 
 .Dashboard .Label {
